# textboost

./: .gitignore  LICENSE  README.md  download.py  environment.yml  eval_dreambooth.py  inference.py  pyproject.toml  requirements.txt  run_textboost_db.py  run_textboost_sdrp.py  split_dreambooth.py  train_textboost.py
assets/: null_emb_sd21base.pt  start_emb_sd21base.pt
data/: dreambooth_n1.txt  styledrop.json
textboost/: dataset.py  text_encoder.py  utils.py
textboost/augment/: __init__.py  paired_augmentation.py
